tests/snapshots/test_input_errors_create__missing_empty_fields-3.snap
---
source: tests/test_input_errors_create.rs
expression: result.unwrap_err()
---
`name`@`song` is required but is empty. 
Required fields: ["artist_id","id","name"]
