tests/snapshots/test_input_errors_create__parsing_errors-2.snap
---
source: tests/test_input_errors_create.rs
expression: result.unwrap_err()
---
unknown variant `BadOp`, expected `Create` or `CreateChild` at line 1 column 9
