tests/snapshots/test_input_errors_create__parsing_errors.snap
---
source: tests/test_input_errors_create.rs
expression: result.unwrap_err()
---
Failed to parse an action op from string: { "Create": ["song", 1]
