tests/snapshots/test_input_errors_create__unknown_fields.snap
---
source: tests/test_input_errors_create.rs
expression: result.unwrap_err()
---
`unknown_field`@`song` is not defined. 
Defined fields: ["artist_id", "file", "id", "memo", "memo2", "name"]
